examples/invalid/example2_if_condition_not_bool.py
x = 1
if x:
    y = 2
